--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Restaurant Name everest restaurant Location: ghandruk,gurung gaun</h1>
+        <h1> Everest restaurant </h1>
         <nav>
             <ul>
                 <li><a href="#about">About Us </a></li>
@@ -25,8 +25,7 @@
 
     <section id="about">
         <h2>About Our Restaurant</h2>
-        <p>Welcome to the Everest restaurant , where we serve delicious meals in a cozy, welcoming environment. Our goal is to provide a memorable dining experience.</p>
-        <p>We are here to serve you a deicious food to remain the taste of local nepali taste.  </p>
+        <p>Welcome to the Everest restaurant , where we serve delicious meals in a cozy, welcoming environment. Our goal is to provide a memorable dining experience.We are here to serve you a deicious food to remain the taste of local nepali taste. We offer a warm and inviting atmosphere at our Nepali restaurant, showcasing the rich culinary heritage of Nepal. Our diverse menu features traditional dishes like momos (dumplings), dal bhat (lentils and rice), and various curries, often accompanied by flavorful pickles and chutneys. The ambiance reflects Nepali culture, with vibrant decor and music, creating a cozy space for us to share the unique flavors and hospitality of Nepal. We emphasize the use of fresh, locally sourced ingredients to highlight authentic tastes.  </p>
     </section>
 
     <section id="menu">
@@ -39,9 +38,9 @@
     </section>
 
     <section id="chef">
-        <h2>Meet Our Chef santosh shah</h2>
+        <h2>Meet Our Chef "santosh shah"</h2>
         <img src="santosh.jpg" alt="Chef Name" height="100">
-        <p>Chef Name brings over 20 years of culinary expertise, combining international flavors with local ingredients to create unique dishes.</p>
+        <p>Chef Name brings over 20 years of culinary expertise, combining international flavors with local ingredients to create unique dishes. Santosh Shah is a renowned Nepali chef celebrated for his innovative approach to traditional Nepali cuisine. Gaining international recognition, particularly after his participation in culinary competitions like "MasterChef India," he has become a prominent figure in promoting Nepali flavors globally. With a focus on sustainability and local ingredients, Shah aims to elevate Nepali dishes, showcasing their rich heritage while adapting them for modern palates. His passion for cooking and dedication to his roots continue to inspire aspiring chefs and food enthusiasts alike.</p>
     </section>
 
     <section id="reservation">
@@ -62,34 +61,53 @@
     <section id="testimonials">
         <h2>What Our Customers Say</h2>
         <blockquote>"The food was amazing, and the service was top-notch!"</blockquote>
+        <blockquote>"environment, friendly service, great menu choices and really decent food and at affordable prices. Will be back.”</blockquote>
         <blockquote>"Best dining experience we’ve had in years!"</blockquote>
     </section>
 
     <section id="hours">
         <h2>Opening Hours</h2>
-        <p>Monday - Friday: 11:00 AM - 9:00 PM</p>
-        <p>Saturday - Sunday: 12:00 PM - 10:00 PM</p>
+        <p>Monday - Friday: 8:00 AM - 10:00 PM</p>
+        <p>Saturday - Sunday: 12:00 PM - 11:00 PM</p>
+    </section>
+
+    <section id="menu Photo">
+        <h2>menu Photo</h2>
+        <img src="thakali_set.jpg" alt="Dish 1 thakali set" height="100">
+        <img src="Dhido.jpg" alt="Dish 2" height="100">
+        <img src="Momo_nepal.jpg" alt="momo" height="100">
+
+        <section id="Menu">
+            <h2>Menu</h2>
+            <p>Thakali set</p>
+            <p>momo (item veg,chicken,buff,pork)</p>
+            <p>dhido set</p>
+            <p>choilaa(buf,chicken,pork)</p>
+
+        </section>
+        
     </section>
 
     <section id="gallery">
         <h2>Photo Gallery</h2>
-        <img src="thakali_set.jpg" alt="Dish 1 thakali set" height="100">
-        <img src="Dhido.jpg" alt="Dish 2" height="100">
-        <img src="Momo_nepal.jpg" alt="momo" height="100">
+        <img src="view.jpg" alt="view"height="100">
+        <img src="view 2.jpg" alt="view" height="100">
+        <img src="view 3.jpg" alt="view" height="100">
         <br>
         <img src="interior.jpg" alt="interior" height="100">
     </section>
 
     <section id="location">
         <h2>Find Us</h2>
-        <div id="map"></div>
-        <p>123 Restaurant St, Food City, FC 12345</p>
+        <div map=Annapurna Region, Ghandruk Nepal></div>
+        <p>Everest Restaurant </p>
     </section>
 
     <footer>
         <p>Follow us on social media!</p>
-        <p>Contact: email@example.com | Phone: (123) 456-7890</p>
-        <p>&copy; 2024 Restaurant Name. All Rights Reserved.</p>
+        <p>you can follow us on our official page: Everest restaurant</p>
+        <p>Contact: everestrestaurant@gmail.com | Phone: 9803079329, 001-5643-8967</p>
+       
     </footer>
 
 </body>
