index html changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="about">
         <h2>About Our Restaurant</h2>
-        <p>Welcome to the Everest restaurant , where we serve delicious meals in a cozy, welcoming environment. Our goal is to provide a memorable dining experience.We are here to serve you a deicious food to remain the taste of local nepali taste. We offer a warm and inviting atmosphere at our Nepali restaurant, showcasing the rich culinary heritage of Nepal. Our diverse menu features traditional dishes like momos (dumplings), dal bhat (lentils and rice), and various curries, often accompanied by flavorful pickles and chutneys. The ambiance reflects Nepali culture, with vibrant decor and music, creating a cozy space for us to share the unique flavors and hospitality of Nepal. We emphasize the use of fresh, locally sourced ingredients to highlight authentic tastes.  </p>
+        <p>Welcome to the Everest restaurant , where we serve delicious meals in a cozy, welcoming environment. Our goal is to provide a memorable dining experience.sWe are here to serve you a deicious food to remain the taste of local nepali taste. We offer a warm and inviting atmosphere at our Nepali restaurant, showcasing the rich culinary heritage of Nepal. Our diverse menu features traditional dishes like momos (dumplings), dal bhat (lentils and rice), and various curries, often accompanied by flavorful pickles and chutneys. The ambiance reflects Nepali culture, with vibrant decor and music, creating a cozy space for us to share the unique flavors and hospitality of Nepal. We emphasize the use of fresh, locally sourced ingredients to highlight authentic tastes.  </p>
     </section>
 
     <section id="menu">
@@ -82,7 +82,7 @@
             <p>Thakali set</p>
             <p>momo (item veg,chicken,buff,pork)</p>
             <p>dhido set</p>
-            <p>choilaa(buf,chicken,pork)</p>
+            <p>choilaa(buff,chicken,pork)</p>
 
         </section>
         
